[package]
name = "denarius"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.3", features = ["default_fonts", "wayland", "wgpu"], default-features = false }
egui_extras = { version = "0.34.3", features = ["default", "image"] }
env_logger = { version = "0.11.10", features = ["auto-color", "humantime"] }